src/objects/Operator_Program_Market_Intelligence__c.object
<CustomObject>
    <fields>
        <fullName>As_of_Date__c</fullName>
        <label>As of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Peak_Days__c</fullName>
        <label>Number of Peak Days</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPMI_Status__c</fullName>
        <label>OPMI Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Outdated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operator_Program__c</fullName>
        <label>Operator Program</label>
        <referenceTo>Operator_Program__c</referenceTo>
        <relationshipLabel>Operator Program Market Intelligence</relationshipLabel>
        <relationshipName>Operator_Program_Market_Intelligence</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Operator Program Market Intelligence</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Operator_Program__c</columns>
        <columns>As_of_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OPMI-{0000}</displayFormat>
        <label>Operator Program Market Intelligence Nam</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operator Program Market Intelligence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>